--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -69,6 +69,13 @@
                 Register
             </h1>
 
+            <% if(hasErrors) {%>
+                <div class="alert alert-danger text-center">
+                <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;<a>
+                <% _.forEach(messages, function(error){ %>
+                    <%= error %> <br>
+                <% }) %>
+            <% } %>
             <div class="inset">
                 <p>
                   <label for="username">USERNAME</label>
