--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
@@ -55,6 +56,11 @@
 <div id="main">
     <div class="main">
         <form action="/" method="post">
+            <h1>
+                <a href="/auth/facebook" class="btn-social btn-facebook btn-lg">
+                <i class="fa fa-facebook"></i> Login With Facebook
+                </a>
+            </h1>
 
             <h1>
                 Login
