--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="css/login.css">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
@@ -55,7 +57,11 @@
 <div id="main">
     <div class="main">
         <form action="/signup" method="post">
-
+            <h1>
+                <a href="/auth/facebook" class="btn-social btn-facebook btn-lg">
+                <i class="fa fa-facebook"></i> Sign Up With Facebook
+                </a>
+            </h1>
             <h1>
                 Register
             </h1>
